--- a/src/components/UI/Card.scss
+++ b/src/components/UI/Card.scss
@@ -1,7 +1,8 @@
 @import "../../styles/colors.scss";
 
 .card {
+  background-color: $secondary_color;
   border-radius: 10px;
-  padding: 10px;
   text-align: center;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
 }
