--- a/src/main.scss
+++ b/src/main.scss
@@ -1,6 +1,9 @@
-@import "styles/colors.scss";
+@import "./styles/colors.scss";
+@import "styles/fonts.scss";
 
 html {
-  background-color: $primary_color;
-  color: $secondary_color;
+  font-family: $primary_font;
+  background: linear-gradient(to bottom, #90dffe 0%, #38a3d1 100%);
+  width: 100%;
+  height: 100%;
 }
