--- a/src/components/WeatherInfo/WeatherOutput.scss
+++ b/src/components/WeatherInfo/WeatherOutput.scss
@@ -5,6 +5,9 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  animation: fadeInAnimation ease 3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
 }
 
 .weather-wrapper {
@@ -24,6 +27,7 @@
 }
 
 .date-text {
+  color: $secondary_color;
   font-size: 3rem;
   margin-bottom: 20px;
   font-weight: 700;
@@ -43,4 +47,35 @@
 
 .last-updated-text {
   padding: 10px;
+}
+
+.morning_gradient {
+  background: linear-gradient(to bottom, #757abf 0%, #8583be 60%, #eab0d1 100%);
+}
+
+.midday_gradient {
+  background: linear-gradient(to bottom, #90dffe 0%, #38a3d1 100%);
+}
+
+.evening_gradient {
+  background: linear-gradient(
+    to bottom,
+    #154277 0%,
+    #576e71 30%,
+    #e1c45e 70%,
+    #b26339 100%
+  );
+}
+
+.night_gradient {
+  background: linear-gradient(to bottom, #020111 10%, #3a3a52 100%);
+}
+
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
