--- a/src/main.scss
+++ b/src/main.scss
@@ -2,8 +2,26 @@
 @import "styles/fonts.scss";
 
 html {
-  font-family: $primary_font;
-  background: linear-gradient(to bottom, #90dffe 0%, #38a3d1 100%);
+  margin: 0;
   width: 100%;
   height: 100%;
+}
+
+body {
+  font-family: $primary_font;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  animation: fadeInAnimation ease 3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
