Updated styling for flexbox to allow for better mobile optimisation

--- a/src/components/Modal/ErrorModal.scss
+++ b/src/components/Modal/ErrorModal.scss
@@ -1,4 +1,4 @@
-.frame {
+.error-container {
   width: 100%;
   height: 100%;
   display: flex;
@@ -6,7 +6,7 @@
   justify-content: center;
 }
 
-.modal {
+.error-modal {
   display: flex;
   flex-direction: column;
   align-items: center;
