--- a/src/components/UI/Card.scss
+++ b/src/components/UI/Card.scss
@@ -1,8 +1,10 @@
 @import "../../styles/colors.scss";
 
 .card {
-  background-color: $secondary_color;
-  border-radius: 10px;
-  text-align: center;
-  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
+  background: rgba(255, 255, 255, 0.03);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(1.4px);
+  -webkit-backdrop-filter: blur(1.4px);
+  border: 1px solid rgba(255, 255, 255, 0.12);
 }
