Updated styling for smaller screens

--- a/src/components/Form/InputField.scss
+++ b/src/components/Form/InputField.scss
@@ -1,4 +1,32 @@
+@import "../../styles/colors.scss";
+
 input {
   min-width: 0;
   width: 100%;
+  height: 40px;
+  text-align: center;
+  background: rgba(255, 255, 255, 0.03);
+  border-radius: 6px;
+  box-shadow: 0 4px 30px rgb(0 0 0 / 10%);
+  backdrop-filter: blur(1.4px);
+  -webkit-backdrop-filter: blur(1.4px);
+  border: 1px solid rgba(255, 255, 255, 0.12);
+  color: $secondary_color;
+  font-size: 1rem;
+}
+
+input::placeholder {
+  color: $secondary_color;
+}
+
+input:focus {
+  outline: none;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: background-color 5000s ease-in-out 0s;
+  -webkit-text-fill-color: #fff !important;
 }
