--- a/src/components/WeatherInfo/WeatherOutput.scss
+++ b/src/components/WeatherInfo/WeatherOutput.scss
@@ -1,26 +1,12 @@
 @import "../../styles/colors.scss";
 
 .weather-info-container {
+  width: 80%;
+  max-width: 600px;
   animation: fadeInAnimation ease 3s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
   margin: 30px;
-}
-
-.weather-wrapper {
-  display: flex;
-  color: $secondary_color;
-  justify-content: center;
-  align-items: center;
-  padding: 40px 100px 40px 60px;
-}
-
-.weather-icon-wrapper {
-  padding-right: 40px;
-}
-
-.weather-info-wrapper {
-  text-align: left;
 }
 
 .date-text {
@@ -30,74 +16,9 @@
   font-weight: 700;
 }
 
-.city-container {
-  font-size: 3rem;
+.bold-text {
+  display: flex;
   font-weight: 700;
-}
-
-.weather-description {
-  text-transform: capitalize;
-  font-size: 1.3rem;
-  padding: 4px 0px 4px 0px;
-}
-
-.weather-temperature {
-  display: flex;
-  font-size: 1.4rem;
-  font-weight: 700;
-  padding: 4px 0px 4px 0px;
-}
-
-.weather-temperature-max-min {
-  display: flex;
-  font-size: 1rem;
-  font-weight: 400;
-  padding: 4px 0px 4px 0px;
-}
-
-.weather-temperature-max {
-  display: flex;
-  margin-right: 8px;
-}
-
-.weather-temperature-min {
-  display: flex;
-}
-
-.weather-temperature-feels-like {
-  display: flex;
-  padding: 4px 0px 4px 0px;
-}
-
-.weather-temperature-humidity {
-  display: flex;
-  padding: 4px 0px 4px 0px;
-}
-
-.superscript {
-  font-size: 1rem;
-  margin: 0;
-}
-
-.superscript-small {
-  font-size: 0.8rem;
-  margin: 0;
-}
-
-.wind-speed {
-  padding: 4px 0px 4px 0px;
-}
-
-.last-updated-container {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  padding: 30px;
-}
-
-.last-updated-text {
-  color: $secondary_color;
-  padding: 10px;
 }
 
 .morning_gradient {
@@ -128,5 +49,16 @@
   }
   100% {
     opacity: 1;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .weather-info-container {
+    width: 70%;
+  }
+
+  .date-text {
+    text-align: center;
+    font-size: 2rem;
   }
 }
