--- a/src/components/Form/InputField.scss
+++ b/src/components/Form/InputField.scss
@@ -5,14 +5,15 @@ input {
   width: 100%;
   height: 40px;
   text-align: center;
-  background: rgba(255, 255, 255, 0.03);
+  background: rgba(255, 255, 255, 0.2);
   border-radius: 6px;
   box-shadow: 0 4px 30px rgb(0 0 0 / 10%);
-  backdrop-filter: blur(1.4px);
-  -webkit-backdrop-filter: blur(1.4px);
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
   border: 1px solid rgba(255, 255, 255, 0.12);
   color: $secondary_color;
   font-size: 1rem;
+  caret-color: $secondary_color;
 }
 
 input::placeholder {
