--- a/src/components/Form/InputField.scss
+++ b/src/components/Form/InputField.scss
@@ -1,9 +1,11 @@
 @import "../../styles/colors.scss";
+@import "../../styles/fonts.scss";
 
 input {
   min-width: 0;
   width: 100%;
-  height: 40px;
+  height: 50px;
+  box-sizing: border-box;
   text-align: center;
   background: rgba(255, 255, 255, 0.2);
   border-radius: 6px;
@@ -12,8 +14,9 @@ input {
   -webkit-backdrop-filter: blur(3px);
   border: 1px solid rgba(255, 255, 255, 0.12);
   color: $secondary_color;
-  font-size: 1rem;
+  font-size: 1.4rem;
   caret-color: $secondary_color;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 input::placeholder {
@@ -30,4 +33,10 @@ input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
   transition: background-color 5000s ease-in-out 0s;
   -webkit-text-fill-color: #fff !important;
+}
+
+@media only screen and (max-width: 600px) {
+  input {
+    font-size: 1.2rem;
+  }
 }
