--- a/src/main.scss
+++ b/src/main.scss
@@ -14,6 +14,7 @@ body {
   height: 100%;
   margin: 0;
   animation: fadeInAnimation ease 3s;
+  -webkit-animation: fadeInAnimation ease 3s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
 }
