Added better icons to improve UI

--- a/src/components/WeatherInfo/WeatherDetails/WeatherIcon.scss
+++ b/src/components/WeatherInfo/WeatherDetails/WeatherIcon.scss
@@ -1,5 +1,6 @@
 .weather-icon-wrapper {
   padding-right: 40px;
+  margin-bottom: 0px;
 }
 
 .weather-icon {
@@ -15,5 +16,6 @@
 
   .weather-icon-wrapper {
     padding-right: 0;
+    margin-bottom: 20px;
   }
 }
