--- a/src/components/WeatherInfo/WeatherInformation.scss
+++ b/src/components/WeatherInfo/WeatherInformation.scss
@@ -11,6 +11,7 @@
 
 .weather-info-wrapper {
   text-align: left;
+  padding-left: 40px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -21,5 +22,6 @@
 
   .weather-info-wrapper {
     text-align: center;
+    padding-left: 0;
   }
 }
