--- a/src/components/WeatherInfo/WeatherOutput.scss
+++ b/src/components/WeatherInfo/WeatherOutput.scss
@@ -54,7 +54,8 @@
 
 @media only screen and (max-width: 600px) {
   .weather-info-container {
-    width: 70%;
+    width: 50%;
+    min-width: 200px;
   }
 
   .date-text {
