--- a/src/components/Form/LocationForm.scss
+++ b/src/components/Form/LocationForm.scss
@@ -3,3 +3,39 @@
   top: 0;
   padding: 30px;
 }
+
+.locationForm {
+  display: flex;
+  border-radius: 6px;
+  box-shadow: 0 4px 30px rgb(0 0 0 / 10%);
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+  border: 1px solid rgba(255, 255, 255, 0.12);
+}
+
+.input-button {
+  background: rgba(255, 255, 255, 0.2);
+  border: none;
+  color: #fbfbfb;
+  font-size: 1.4rem;
+  font-family: "Roboto Condensed", sans-serif;
+  border-radius: 0 4px 4px 0;
+  padding: 0 14px 0 0;
+}
+
+@media only screen and (max-width: 600px) {
+  .locationForm-wrapper {
+    width: 50%;
+    min-width: 200px;
+  }
+
+  .input-button {
+    font-size: 1.2rem;
+  }
+}
+
+@media only screen and (max-height: 750px) {
+  .locationForm-wrapper {
+    padding: 10px;
+  }
+}
