--- a/src/components/Form/LocationForm.scss
+++ b/src/components/Form/LocationForm.scss
@@ -21,6 +21,7 @@
   font-family: "Roboto Condensed", sans-serif;
   border-radius: 0 4px 4px 0;
   padding: 0 14px 0 0;
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 600px) {
