--- a/src/components/WeatherInfo/RainEffect.scss
+++ b/src/components/WeatherInfo/RainEffect.scss
@@ -3,7 +3,7 @@
   width: 100%;
   position: absolute;
   background: url(https://i.postimg.cc/MKgprHJg/rain.png);
-  animation: fadeInAnimationRain 10s ease, rain 0.3s linear infinite;
+  animation: fadeInAnimationRain 10s ease forwards, rain 0.3s linear infinite;
   -webkit-animation: fadeInAnimationRain 10s ease forwards,
     rain 0.3s linear infinite;
 }
@@ -22,6 +22,6 @@
     opacity: 0;
   }
   100% {
-    opacity: 0.35;
+    opacity: 0.1;
   }
 }
