--- a/src/main.scss
+++ b/src/main.scss
@@ -11,7 +11,7 @@ html {
 body {
   font-family: $primary_font;
   width: 100%;
-  min-height: 100%;
+  height: 100%;
   margin: 0;
   animation: fadeInAnimation ease 3s;
   -webkit-animation: fadeInAnimation ease 3s;
