--- a/src/main.scss
+++ b/src/main.scss
@@ -4,14 +4,14 @@
 html {
   margin: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
 }
 
 body {
   font-family: $primary_font;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   margin: 0;
   animation: fadeInAnimation ease 3s;
   -webkit-animation: fadeInAnimation ease 3s;
@@ -20,7 +20,7 @@ body {
 }
 
 #root {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   margin: 0;
   overflow: hidden;
