--- a/src/main.scss
+++ b/src/main.scss
@@ -2,16 +2,14 @@
 @import "styles/fonts.scss";
 
 html {
-  margin: 0;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
+  min-height: -webkit-fill-available;
 }
 
 body {
   font-family: $primary_font;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
   margin: 0;
   animation: fadeInAnimation ease 3s;
   -webkit-animation: fadeInAnimation ease 3s;
