--- a/src/main.scss
+++ b/src/main.scss
@@ -2,14 +2,15 @@
 @import "styles/fonts.scss";
 
 html {
-  min-height: -webkit-fill-available;
+  margin: 0;
+  width: 100%;
+  height: 100%;
 }
 
 body {
   font-family: $primary_font;
   width: 100%;
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
+  height: 100%;
   margin: 0;
   animation: fadeInAnimation ease 3s;
   -webkit-animation: fadeInAnimation ease 3s;
@@ -21,7 +22,6 @@ body {
   height: 100%;
   width: 100%;
   margin: 0;
-  overflow: hidden;
 }
 
 @keyframes fadeInAnimation {
