--- a/src/main.scss
+++ b/src/main.scss
@@ -4,13 +4,13 @@
 html {
   margin: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 body {
   font-family: $primary_font;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   margin: 0;
   animation: fadeInAnimation ease 3s;
   -webkit-animation: fadeInAnimation ease 3s;
