--- a/src/main.scss
+++ b/src/main.scss
@@ -10,7 +10,7 @@ html {
 body {
   font-family: $primary_font;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   margin: 0;
   animation: fadeInAnimation ease 3s;
   -webkit-animation: fadeInAnimation ease 3s;
