--- a/src/main.scss
+++ b/src/main.scss
@@ -3,14 +3,15 @@
 
 html {
   margin: 0;
-  width: 100%;
-  height: 100vh;
+  padding: 0;
+  height: 100%;
 }
 
 body {
+  position: relative;
+  min-height: 100%;
+  height: 100%;
   font-family: $primary_font;
-  width: 100%;
-  height: 100vh;
   margin: 0;
   animation: fadeInAnimation ease 3s;
   -webkit-animation: fadeInAnimation ease 3s;
@@ -19,7 +20,8 @@ body {
 }
 
 #root {
-  height: 100vh;
+  min-height: 100%;
+  height: 100%;
   width: 100%;
   margin: 0;
 }
