--- a/src/main.scss
+++ b/src/main.scss
@@ -15,6 +15,7 @@ body {
   -webkit-animation: fadeInAnimation ease 3s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
+  overflow-y: hidden;
 }
 
 #root {
